# sano_game_media

./: .gitignore  .vimspector.json  CMakeLists.txt  README.md  TODO.md
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  init_and_release.cpp  test_.cpp  use_custom_font.cpp  use_font.cpp  use_frame_manager.cpp  use_image_loader.cpp  use_load_files.cpp  use_moveable_widget.cpp  use_music_and_chunk.cpp  use_sprite_image.cpp  use_widget.cpp  use_widgets.cpp
extras/: CMakeLists.txt
include/: sano_game_media.hpp
include/common/: audio_device.hpp  font_manager.hpp  graphics_device2d.hpp  key_code.hpp  key_input_manager.hpp  sound.hpp  sound_registry.hpp  string_texture_cache.hpp  texture.hpp  texture_manager.hpp  types.hpp  window_manager.hpp
include/image/: image.hpp  image_loader.hpp  image_manager.hpp  image_sprite_animation.hpp
include/platform/: platform.hpp  platform_util.hpp
include/util/: debug_view.hpp  debug_view_widget.hpp  debuggable.hpp  file_buffer.hpp  log_listener.hpp  string_util.hpp  string_writer.hpp
include/widget/: board.hpp  button.hpp  event.hpp  gui_engine.hpp  key_inputable.hpp  moveable.hpp  scrollable.hpp  static.hpp  string.hpp  types.hpp  widget.hpp  widget_class.hpp  widget_manager.hpp  widget_util.hpp
libs/: CMakeLists.txt
src/: sano_game_media.cpp  sano_game_media_pch.hpp
src/asset/: base_texture.cpp  pcsenior.cpp
src/common/: audio_device.cpp  font_manager.cpp  graphics_device2d.cpp  key_input_manager.cpp  sound.cpp  sound_registry.cpp  texture.cpp  texture_manager.cpp  types.cpp  window_manager.cpp
src/image/: image.cpp  image_loader.cpp  image_manager.cpp  image_sprite_animation.cpp
src/platform/: platform.cpp  platform_util.cpp
src/util/: debug_view.cpp  debuggable.cpp  file_buffer.cpp  log_listener.cpp  string_util.cpp
src/widget/: board.cpp  button.cpp  gui_engine.cpp  key_inputable.cpp  moveable.cpp  static.cpp  widget.cpp  widget_class.cpp  widget_manager.cpp  widget_util.cpp
tests/: CMakeLists.txt  example.cpp
tools/: build.sh  test.sh
